--- a/Vezba4/StudentService_Data/packages.config
+++ b/Vezba4/StudentService_Data/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.WindowsAzure.Configuration" version="5.0.1118.2" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net461" />
+  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="9.1.0" targetFramework="net461" />
 </packages>
